# bt

./: README.md  pyproject.toml  requirements.txt
cli/: __main__.py  cli.py
docker_sam_adapter/: Dockerfile  enroot_test.sbatch  requirements.txt
draft/: Dockerfile  requirements.txt  run.py
preprocessing/: proof_not_empty.py  run.py
resample/: __main__.py
sbatch/: sam-adapter-80GB.sbatch
