[tool.poetry]
name = "bl"
version = "0.1.0"
description = "bl related code"
authors = ["Aleksandre Kandelaki"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
opencv-python = "^4.8.1.78"
jupyter = "^1.0.0"
matplotlib = "^3.8.0"


[tool.poetry.group.dev.dependencies]
setuptools = "^68.2.2"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"